--- a/Extent-Report/ExtentReport.html
+++ b/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-06-05 17:27:26</span>
+					<span class='suite-started-time'>2022-06-07 19:13:55</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 9s+839ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 8s+29ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 9s+839ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 8s+29ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-06-05 17:27:16</span> 
+							<span class='panel-lead suite-started-time'>2022-06-07 19:13:47</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-06-05 17:27:26</span> 
+							<span class='panel-lead suite-ended-time'>2022-06-07 19:13:55</span> 
 						</div> 
 					</div>
 				</div>
@@ -173,11 +173,11 @@
 										</tr>
 										<tr>
 											<td>OS</td>
-											<td>Windows 10</td>
+											<td>Mac OS X</td>
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>1.8.0_111</td>
+											<td>1.8.0_202</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													FloatingMenuTest
+													HomeTest
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='FloatingMenuTest'><a href='#!'>FloatingMenuTest</a></li>
+											<li class='HomeTest'><a href='#!'>HomeTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='ab997efc-495e-4d3b-a30d-bf4b7d11468c'>
+										<li class='collection-item test displayed active fail ' extentid='22086efe-3f15-4f83-ac61-32315b23dca8'>
 											<div class='test-head'>
-												<span class='test-name'>validateLoginPage </span>
+												<span class='test-name'>testHomePageElements </span>
 												<span class='test-status label right outline capitalize fail'>fail</span>
-												<span class='category-assigned hide  floatingmenutest'></span>
+												<span class='category-assigned hide  hometest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-05 17:27:23</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-05 17:27:24</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+78ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-07 19:13:54</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-07 19:13:54</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>FloatingMenuTest</span>
+																<span class='category text-white'>HomeTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -303,13 +303,9 @@
 														<tbody>
 																<tr>
 																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>17:27:24</td>
-																	<td class='step-details'>java.lang.AssertionError: expected [false] but found [true]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertFalse(Assert.java:65)
-	at org.testng.Assert.assertFalse(Assert.java:75)
-	at amazon.FloatingMenuTest.validateLoginPage(FloatingMenuTest.java:26)
+																	<td class='timestamp'>19:13:54</td>
+																	<td class='step-details'>java.lang.NullPointerException
+	at rahulshettyacademy.HomeTest.testHomePageElements(HomeTest.java:20)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -332,8 +328,8 @@
 	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
 	at org.testng.TestNG.runSuites(TestNG.java:1049)
 	at org.testng.TestNG.run(TestNG.java:1017)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)</td>
+	at org.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:73)
+	at org.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:123)</td>
 																</tr>
 														</tbody>
 													</table>
@@ -391,7 +387,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>FloatingMenuTest</span>
+													<span class='category-name'>HomeTest</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='fail label dot'>Fail: 1</span>
@@ -415,8 +411,8 @@
 															</thead>
 															<tbody>
 																	<tr class='fail'>
-																		<td>2022-06-05 17:27:23</td>
-																		<td><span class='category-link linked' extentid='ab997efc-495e-4d3b-a30d-bf4b7d11468c'>validateLoginPage</span></td>
+																		<td>2022-06-07 19:13:54</td>
+																		<td><span class='category-link linked' extentid='22086efe-3f15-4f83-ac61-32315b23dca8'>testHomePageElements</span></td>
 																		<td><div class='status label capitalize fail'>fail</div></td>
 																	</tr>
 															<tbody>
