--- a/Extent-Report/ExtentReport.html
+++ b/Extent-Report/ExtentReport.html
@@ -54,9 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-06-07 21:53:17</span>
-					<span class='suite-started-time'>2022-06-07 20:53:31</span>
-					<span class='suite-started-time'>2022-06-07 21:09:01</span>
+					<span class='suite-started-time'>2022-06-08 23:42:46</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -86,33 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 7s+998ms</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 8s+694ms</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 8s+152ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 16s+177ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 7s+998ms</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 8s+694ms</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 8s+152ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 16s+177ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-06-07 21:53:09</span> 
-							<span class='panel-lead suite-started-time'>2022-06-07 20:53:23</span> 
-							<span class='panel-lead suite-started-time'>2022-06-07 21:08:52</span> 
+							<span class='panel-lead suite-started-time'>2022-06-08 23:42:30</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-06-07 21:53:17</span> 
-							<span class='panel-lead suite-ended-time'>2022-06-07 20:53:31</span> 
-							<span class='panel-lead suite-ended-time'>2022-06-07 21:09:01</span> 
+							<span class='panel-lead suite-ended-time'>2022-06-08 23:42:46</span> 
 						</div> 
 					</div>
 				</div>
@@ -187,7 +177,6 @@
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>11.0.8</td>
 											<td>11.0.7</td>
 										</tr>
 										<tr>
@@ -216,9 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													SignInPageTest
-													HomeButtonTest
-													AmazonHomePageTest
+													SearchItemTest
 												</td>
 											</tr>
 									</tbody>
@@ -254,9 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='SignInPageTest'><a href='#!'>SignInPageTest</a></li>
-											<li class='HomeButtonTest'><a href='#!'>HomeButtonTest</a></li>
-											<li class='AmazonHomePageTest'><a href='#!'>AmazonHomePageTest</a></li>
+											<li class='SearchItemTest'><a href='#!'>SearchItemTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -288,46 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='5eeb02d7-e28b-435e-b709-577f101aa7d3'>
+										<li class='collection-item test displayed active fail ' extentid='9a1777f8-9ded-4c53-beb0-1f2ce5f9e3af'>
 											<div class='test-head'>
-												<span class='test-name'>testSignIn </span>
+												<span class='test-name'>testSearchField </span>
 												<span class='test-status label right outline capitalize fail'>fail</span>
-												<span class='category-assigned hide  signinpagetest'></span>
+												<span class='category-assigned hide  searchitemtest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-07 21:53:16</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-07 21:53:17</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+204ms</span>
-										<li class='collection-item test displayed active pass ' extentid='b48ba5d4-e779-42d7-a2fa-77e605494f5b'>
-											<div class='test-head'>
-												<span class='test-name'>testHomeClickButton </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  homebuttontest'></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-07 20:53:30</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-07 20:53:31</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+926ms</span>
-										<li class='collection-item test displayed active pass ' extentid='7c87bb0d-6b48-4d07-9dc3-b2695612ad26'>
-											<div class='test-head'>
-												<span class='test-name'>amazonLogoPageTest </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  amazonhomepagetest'></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-07 21:08:56</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-07 21:09:00</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+24ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-08 23:42:34</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-08 23:42:46</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 11s+540ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>SignInPageTest</span>
-																<span class='category text-white'>HomeButtonTest</span>
-																<span class='category text-white'>AmazonHomePageTest</span>
+																<span class='category text-white'>SearchItemTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -342,16 +303,16 @@
 														<tbody>
 																<tr>
 																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>21:53:17</td>
-																	<td class='step-details'>org.openqa.selenium.InvalidSelectorException: invalid selector: An invalid or illegal selector was specified
+																	<td class='timestamp'>23:42:46</td>
+																	<td class='step-details'>org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//span[contains(text(),'"iphone 13 pro"')]"}
   (Session info: chrome=102.0.5005.61)
-For documentation on this error, please visit: https://selenium.dev/exceptions/#invalid_selector_exception
+For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
 Build info: version: '4.1.4', revision: '535d840ee2'
-System info: host: 'winsens-MacBook-Pro.local', ip: 'fe80:0:0:0:1409:9760:c85f:689d%en0', os.name: 'Mac OS X', os.arch: 'x86_64', os.version: '10.16', java.version: '11.0.8'
+System info: host: 'MacBook-Pro-2.fios-router.home', ip: 'fe80:0:0:0:10b2:df22:816e:9019%en0', os.name: 'Mac OS X', os.arch: 'x86_64', os.version: '10.16', java.version: '11.0.7'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [919d0917099627bee0c3a4e5abaef14b, findElement {using=id, value=}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 102.0.5005.61, chrome: {chromedriverVersion: 102.0.5005.61 (0e59bcc00cc4..., userDataDir: /var/folders/62/8m8c_ncd2tv...}, goog:chromeOptions: {debuggerAddress: localhost:54793}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: MAC, platformName: MAC, proxy: Proxy(), se:cdp: ws://localhost:54793/devtoo..., se:cdpVersion: 102.0.5005.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 919d0917099627bee0c3a4e5abaef14b
+Command: [9fffd3e261cc2c3397b089632569eaef, findElement {using=xpath, value=//span[contains(text(),'"iphone 13 pro"')]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 102.0.5005.61, chrome: {chromedriverVersion: 102.0.5005.61 (0e59bcc00cc4..., userDataDir: /var/folders/wz/dgqm41w90yg...}, goog:chromeOptions: {debuggerAddress: localhost:50212}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: MAC, platformName: MAC, proxy: Proxy(), se:cdp: ws://localhost:50212/devtoo..., se:cdpVersion: 102.0.5005.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: 9fffd3e261cc2c3397b089632569eaef
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -364,15 +325,15 @@ Session ID: 919d0917099627bee0c3a4e5abaef14b
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:567)
 	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:385)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:377)
 	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
 	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
-	at com.sun.proxy.$Proxy19.click(Unknown Source)
-	at base.CommonAPI.click(CommonAPI.java:174)
-	at winsenPractice.SignInPage.setSignIn(SignInPage.java:20)
-	at winsenPracticeTest.SignInPageTest.testSignIn(SignInPageTest.java:13)
+	at com.sun.proxy.$Proxy19.getText(Unknown Source)
+	at base.CommonAPI.getElementText(CommonAPI.java:170)
+	at ramdanePackage.AmazonSearchPage.getItemSearchText(AmazonSearchPage.java:24)
+	at ramdanePackageTest.SearchItemTest.testSearchField(SearchItemTest.java:17)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -396,11 +357,7 @@ Session ID: 919d0917099627bee0c3a4e5abaef14b
 	at org.testng.TestNG.runSuites(TestNG.java:1049)
 	at org.testng.TestNG.run(TestNG.java:1017)
 	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)</td>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:53:31</td>
-																	<td class='timestamp'>21:09:00</td>
-																	<td class='step-details'>Test Passed</td>
+	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:110)</td>
 																</tr>
 														</tbody>
 													</table>
@@ -458,18 +415,16 @@ Session ID: 919d0917099627bee0c3a4e5abaef14b
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>SignInPageTest</span>
-													<span class='category-name'>HomeButtonTest</span>
-													<span class='category-name'>AmazonHomePageTest</span>
+													<span class='category-name'>SearchItemTest</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='pass label dot'>Pass: 1</span>
+														<span class='fail label dot'>Fail: 1</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
-															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>0</span></a>
+															<a href='#!' class='fail label filter'>Fail <span class='icon'>1</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
 														</div>
 													</div>
@@ -484,15 +439,9 @@ Session ID: 919d0917099627bee0c3a4e5abaef14b
 															</thead>
 															<tbody>
 																	<tr class='fail'>
-																		<td>2022-06-07 21:53:16</td>
-																		<td><span class='category-link linked' extentid='5eeb02d7-e28b-435e-b709-577f101aa7d3'>testSignIn</span></td>
+																		<td>2022-06-08 23:42:34</td>
+																		<td><span class='category-link linked' extentid='9a1777f8-9ded-4c53-beb0-1f2ce5f9e3af'>testSearchField</span></td>
 																		<td><div class='status label capitalize fail'>fail</div></td>
-																	<tr class='pass'>
-																		<td>2022-06-07 20:53:30</td>
-																		<td><span class='category-link linked' extentid='b48ba5d4-e779-42d7-a2fa-77e605494f5b'>testHomeClickButton</span></td>
-																		<td>2022-06-07 21:08:56</td>
-																		<td><span class='category-link linked' extentid='7c87bb0d-6b48-4d07-9dc3-b2695612ad26'>amazonLogoPageTest</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
 														</table>
