--- a/Extent-Report/ExtentReport.html
+++ b/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-06-07 21:53:17</span>
+					<span class='suite-started-time'>2022-06-10 17:36:10</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 7s+998ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 4s+750ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 7s+998ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 4s+750ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-06-07 21:53:09</span> 
+							<span class='panel-lead suite-started-time'>2022-06-10 17:36:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-06-07 21:53:17</span> 
+							<span class='panel-lead suite-ended-time'>2022-06-10 17:36:10</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													SignInPageTest
+													HandleSSLTest
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='SignInPageTest'><a href='#!'>SignInPageTest</a></li>
+											<li class='HandleSSLTest'><a href='#!'>HandleSSLTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='5eeb02d7-e28b-435e-b709-577f101aa7d3'>
+										<li class='collection-item test displayed active fail ' extentid='182ddec7-96f5-46c8-8974-589d24b170f7'>
 											<div class='test-head'>
-												<span class='test-name'>testSignIn </span>
+												<span class='test-name'>HandleSSLTest </span>
 												<span class='test-status label right outline capitalize fail'>fail</span>
-												<span class='category-assigned hide  signinpagetest'></span>
+												<span class='category-assigned hide  handlessltest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-07 21:53:16</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-07 21:53:17</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+204ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-06-10 17:36:08</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-06-10 17:36:09</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+208ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>SignInPageTest</span>
+																<span class='category text-white'>HandleSSLTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -303,37 +303,15 @@
 														<tbody>
 																<tr>
 																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>21:53:17</td>
-																	<td class='step-details'>org.openqa.selenium.InvalidSelectorException: invalid selector: An invalid or illegal selector was specified
-  (Session info: chrome=102.0.5005.61)
-For documentation on this error, please visit: https://selenium.dev/exceptions/#invalid_selector_exception
-Build info: version: '4.1.4', revision: '535d840ee2'
-System info: host: 'winsens-MacBook-Pro.local', ip: 'fe80:0:0:0:1409:9760:c85f:689d%en0', os.name: 'Mac OS X', os.arch: 'x86_64', os.version: '10.16', java.version: '11.0.8'
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [919d0917099627bee0c3a4e5abaef14b, findElement {using=id, value=}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 102.0.5005.61, chrome: {chromedriverVersion: 102.0.5005.61 (0e59bcc00cc4..., userDataDir: /var/folders/62/8m8c_ncd2tv...}, goog:chromeOptions: {debuggerAddress: localhost:54793}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: MAC, platformName: MAC, proxy: Proxy(), se:cdp: ws://localhost:54793/devtoo..., se:cdpVersion: 102.0.5005.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 919d0917099627bee0c3a4e5abaef14b
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:490)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:567)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:385)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:377)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
-	at com.sun.proxy.$Proxy19.click(Unknown Source)
-	at base.CommonAPI.click(CommonAPI.java:174)
-	at winsenPractice.SignInPage.setSignIn(SignInPage.java:20)
-	at winsenPracticeTest.SignInPageTest.testSignIn(SignInPageTest.java:13)
+																	<td class='timestamp'>17:36:09</td>
+																	<td class='step-details'>java.lang.AssertionError: expected [expired.badssl.com] but found [Privacy error]
+	at org.testng.Assert.fail(Assert.java:96)
+	at org.testng.Assert.failNotEquals(Assert.java:776)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:137)
+	at org.testng.Assert.assertEquals(Assert.java:118)
+	at org.testng.Assert.assertEquals(Assert.java:453)
+	at org.testng.Assert.assertEquals(Assert.java:463)
+	at winsenHandleSSLTest.HandleSSLTest.HandleSSLTest(HandleSSLTest.java:16)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -415,7 +393,7 @@ Session ID: 919d0917099627bee0c3a4e5abaef14b
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>SignInPageTest</span>
+													<span class='category-name'>HandleSSLTest</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='fail label dot'>Fail: 1</span>
@@ -439,8 +417,8 @@ Session ID: 919d0917099627bee0c3a4e5abaef14b
 															</thead>
 															<tbody>
 																	<tr class='fail'>
-																		<td>2022-06-07 21:53:16</td>
-																		<td><span class='category-link linked' extentid='5eeb02d7-e28b-435e-b709-577f101aa7d3'>testSignIn</span></td>
+																		<td>2022-06-10 17:36:08</td>
+																		<td><span class='category-link linked' extentid='182ddec7-96f5-46c8-8974-589d24b170f7'>HandleSSLTest</span></td>
 																		<td><div class='status label capitalize fail'>fail</div></td>
 																	</tr>
 															<tbody>
